Haproxy https example

--- a/sni/nginx/nginx.conf
+++ b/sni/nginx/nginx.conf
@@ -5,8 +5,8 @@ http {
         ssl on;
         server_name _;
         resolver 127.0.0.1;
-        ssl_certificate /etc/nginx1/ssl/nginx.crt;
-        ssl_certificate_key /etc/nginx1/ssl/nginx.key;
+        ssl_certificate /etc/nginx1/ssl/nginxsni.crt;
+        ssl_certificate_key /etc/nginx1/ssl/nginxsni.key;
 
         location / {
             proxy_pass http://nginx1/hostname;
@@ -17,8 +17,8 @@ http {
         ssl on;
         server_name nginx2;
         resolver 127.0.0.1;
-        ssl_certificate /etc/nginx2/ssl/nginx.crt;
-        ssl_certificate_key /etc/nginx2/ssl/nginx.key;
+        ssl_certificate /etc/nginx2/ssl/nginxsni.crt;
+        ssl_certificate_key /etc/nginx2/ssl/nginxsni.key;
 
         location / {
             proxy_pass http://nginx2/hostname;
@@ -29,8 +29,8 @@ http {
         ssl on;
         server_name nginx3;
         resolver 127.0.0.1;
-        ssl_certificate /etc/nginx3/ssl/nginx.crt;
-        ssl_certificate_key /etc/nginx3/ssl/nginx.key;
+        ssl_certificate /etc/nginx3/ssl/nginxsni.crt;
+        ssl_certificate_key /etc/nginx3/ssl/nginxsni.key;
 
         location / {
             proxy_pass http://nginx3/hostname;
