--- a/https/nginx/default.conf
+++ b/https/nginx/default.conf
@@ -8,8 +8,8 @@ server {
         index index.html index.htm;
 
         server_name localhost;
-        ssl_certificate /etc/nginx/ssl/nginx.crt;
-        ssl_certificate_key /etc/nginx/ssl/nginx.key;
+        ssl_certificate /etc/nginx/ssl/nginxhttps.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginxhttps.key;
 
         location / {
                 try_files $uri $uri/ =404;
